[project]
name = "tagr"
version = "0.1.0"
description = "A minimal, user-friendly CLI tool for editing audio file metadata."
readme = "README.md"
license = "MIT"
requires-python = "~=3.13.0"
authors = [{ name = "June", email = "junapur@proton.me" }]
maintainers = [{ name = "June", email = "junapur@proton.me" }]
keywords = ["CLI", "Music", "Audio"]
dependencies = []

[project.urls]
Homepage = "https://github.com/junapur/Tagr"
Repository = "https://github.com/junapur/Tagr"
Issues = "https://github.com/junapur/Tagr/issues"

[project.scripts]
tagr = "tagr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
linting = ["ruff==0.11.10"]
type-checking = ["pyright==1.1.400"]

[tool.uv]
default-groups = "all"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "I",     # isort
    "ASYNC", # flake8-async
    "S",     # flake8-bandit
    "A",     # flake8-builtins
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "TD",    # flake8-todos
    "PTH",   # flake8-use-pathlib
]

ignore = [
    # The following conflict with Ruff's formatter:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "E111",
    "E114",
    "E117",
    "E501",
]
